--- a/Kubernetes/assets/prometheus/prometheus-configmap.yaml
+++ b/Kubernetes/assets/prometheus/prometheus-configmap.yaml
@@ -16,7 +16,29 @@ data:
       - job_name: 'prometheus'
         static_configs:
         - targets: ['localhost:9090']
-      
+
+      - job_name: 'kubelet'
+        scheme: https
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          insecure_skip_verify: true
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        kubernetes_sd_configs:
+        - role: node
+
+        relabel_configs:
+        - source_labels: [__meta_kubernetes_node_name]
+          target_label:  node
+        - action: labelmap
+          regex: __meta_kubernetes_(.+)
+
+        - target_label: __address__
+          source_labels: [__meta_kubernetes_node_address_InternalIP]
+          regex: '(.*)'
+          replacement: $1:10255
+        - target_label: __scheme__
+          replacement: 'http'
+
       - job_name: 'cluster-nodes'
         scheme: https
         tls_config:
